[tool]
[tool.poetry]
name = "pho-pyqode-core"
version = "3.0.0"
description = "PyQt/PySide Source Code Editor Widget"
license = "MIT"
keywords = ["CodeEdit", "PyQt", "source", "code", "editor", "widget", "qt"]
classifiers = ["Development Status :: 5 - Production/Stable", "Environment :: X11 Applications :: Qt", "Environment :: Win32 (MS Windows)", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: Microsoft :: Windows", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3.2", "Programming Language :: Python :: 3.3", "Programming Language :: Python :: 3.4", "Topic :: Software Development :: Libraries :: Application Frameworks", "Topic :: Software Development :: Widget Sets", "Topic :: Text Editors :: Integrated Development Environments (IDE)"]
homepage = "https://github.com/CommanderPho/pyqode.core"
authors = ["Robert Haase, Colin Duquesnoy <robert.haase@tu-dresden.de>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9"
future = "*"
pygments = "*"
