[project]
name = "pyqode-core"
version = "3.0.1"
dependencies = [
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
]
dynamic = [
    "description",
    "readme",
    "requires-python",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "urls"
]


[dependency-groups]
dev = [
    "pyqt5",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "coveralls",
]

[tool.uv]
package = false
